// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Meta-Prompts > buildMetaPrompt > snapshot: estrutura completa do meta-prompt para modeloDispositivo 1`] = `
"Você é um especialista em engenharia de prompts jurídicos.

═══════════════════════════════════════════════════════════════════════════════
TAREFA
═══════════════════════════════════════════════════════════════════════════════

Analise os exemplos de DISPOSITIVO DE SENTENÇA fornecidos pelo magistrado e gere um PROMPT DE INSTRUÇÃO
completo que permita a uma IA reproduzir fielmente o estilo de redação deste juiz.

═══════════════════════════════════════════════════════════════════════════════
EXEMPLOS DO MAGISTRADO
═══════════════════════════════════════════════════════════════════════════════

══ EXEMPLO 1 ══
Exemplo de dispositivo do juiz

═══════════════════════════════════════════════════════════════════════════════
PROMPT DE REFERÊNCIA (Use esta ESTRUTURA, adapte o CONTEÚDO aos exemplos)
═══════════════════════════════════════════════════════════════════════════════

Prompt de referência do sistema

═══════════════════════════════════════════════════════════════════════════════
ANÁLISE REQUERIDA
═══════════════════════════════════════════════════════════════════════════════

1. ESTRUTURA: Quantos parágrafos, ordem das informações, divisões
2. VOCABULÁRIO: Termos preferidos, conectivos, expressões recorrentes
3. TOM: Formal/informal, técnico/acessível, detalhado/conciso
4. PADRÕES: Como inicia, como conclui, como referencia partes

═══════════════════════════════════════════════════════════════════════════════
FORMATO DA RESPOSTA
═══════════════════════════════════════════════════════════════════════════════

Gere um prompt de instrução que:
- Siga a ESTRUTURA do prompt de referência
- Adapte o CONTEÚDO para refletir o estilo detectado nos exemplos
- Inclua exemplos de frases modelo com placeholders [INFO]
- Seja autocontido (qualquer LLM deve poder usá-lo)

⚠️ Responda APENAS com o prompt de instrução, sem explicações."
`;

exports[`Meta-Prompts > buildMetaPrompt > snapshot: estrutura completa do meta-prompt para modeloRelatorio 1`] = `
"Você é um especialista em engenharia de prompts jurídicos.

═══════════════════════════════════════════════════════════════════════════════
TAREFA
═══════════════════════════════════════════════════════════════════════════════

Analise os exemplos de MINI-RELATÓRIO fornecidos pelo magistrado e gere um PROMPT DE INSTRUÇÃO
completo que permita a uma IA reproduzir fielmente o estilo de redação deste juiz.

═══════════════════════════════════════════════════════════════════════════════
EXEMPLOS DO MAGISTRADO
═══════════════════════════════════════════════════════════════════════════════

══ EXEMPLO 1 ══
Exemplo de mini-relatório

═══════════════════════════════════════════════════════════════════════════════
PROMPT DE REFERÊNCIA (Use esta ESTRUTURA, adapte o CONTEÚDO aos exemplos)
═══════════════════════════════════════════════════════════════════════════════

Prompt de referência do sistema

═══════════════════════════════════════════════════════════════════════════════
ANÁLISE REQUERIDA
═══════════════════════════════════════════════════════════════════════════════

1. ESTRUTURA: Quantos parágrafos, ordem das informações, divisões
2. VOCABULÁRIO: Termos preferidos, conectivos, expressões recorrentes
3. TOM: Formal/informal, técnico/acessível, detalhado/conciso
4. PADRÕES: Como inicia, como conclui, como referencia partes

═══════════════════════════════════════════════════════════════════════════════
FORMATO DA RESPOSTA
═══════════════════════════════════════════════════════════════════════════════

Gere um prompt de instrução que:
- Siga a ESTRUTURA do prompt de referência
- Adapte o CONTEÚDO para refletir o estilo detectado nos exemplos
- Inclua exemplos de frases modelo com placeholders [INFO]
- Seja autocontido (qualquer LLM deve poder usá-lo)

⚠️ Responda APENAS com o prompt de instrução, sem explicações."
`;

exports[`Meta-Prompts > buildStyleMetaPrompt > snapshot: estrutura completa do meta-prompt para estiloRedacao 1`] = `
"Você é um especialista em análise linguística e engenharia de prompts.

═══════════════════════════════════════════════════════════════════════════════
TAREFA
═══════════════════════════════════════════════════════════════════════════════

Analise os exemplos de SENTENÇAS TRABALHISTAS fornecidos pelo magistrado e extraia
o ESTILO DE REDAÇÃO característico. Gere um PROMPT DE INSTRUÇÃO que faça uma IA
reproduzir fielmente esse estilo.

⚠️ FOCO EXCLUSIVO EM ESTILO (não em estrutura):
- TOM: Formal/informal, autoritativo/didático, sereno/incisivo
- VOCABULÁRIO: Termos preferidos, expressões recorrentes, latinismos ou linguagem acessível
- CONECTIVOS: Quais usa para transição (ademais, outrossim, nesse sentido, por outro lado...)
- RITMO: Frases longas/curtas, parágrafos densos/espaçados, cadência da escrita
- PESSOA: 1ª pessoa singular? Plural majestático? Impessoal?
- ADJETIVAÇÃO: Evita? Usa moderadamente? Abundante?
- FUNDAMENTAÇÃO: Como introduz argumentos, cita doutrina, menciona jurisprudência

═══════════════════════════════════════════════════════════════════════════════
EXEMPLOS DO MAGISTRADO
═══════════════════════════════════════════════════════════════════════════════

══ EXEMPLO 1 ══
Exemplo de sentença trabalhista do juiz

═══════════════════════════════════════════════════════════════════════════════
ESTILO DE REFERÊNCIA (adapte ao estilo detectado nos exemplos)
═══════════════════════════════════════════════════════════════════════════════

Estilo de referência do sistema

═══════════════════════════════════════════════════════════════════════════════
ANÁLISE REQUERIDA
═══════════════════════════════════════════════════════════════════════════════

Extraia do texto do magistrado:

1. TOM GERAL
   - É técnico ou acessível?
   - É direto ou elaborado?
   - Demonstra autoridade ou busca convencer?

2. VOCABULÁRIO CARACTERÍSTICO
   - Liste os conectivos mais usados
   - Identifique expressões recorrentes
   - Note se usa latinismos (v.g., e.g., data venia) ou evita

3. ESTRUTURA DAS FRASES
   - Frases longas com múltiplas orações ou curtas e diretas?
   - Como constrói argumentos complexos?

4. PADRÕES DE FUNDAMENTAÇÃO
   - Como introduz citações de jurisprudência?
   - Como referencia doutrina?
   - Como conecta norma ao caso concreto?

═══════════════════════════════════════════════════════════════════════════════
FORMATO DA RESPOSTA
═══════════════════════════════════════════════════════════════════════════════

Gere um prompt de instrução de ESTILO que:

1. Descreva o TOM característico do magistrado em 2-3 frases
2. Liste os CONECTIVOS E EXPRESSÕES preferidos (mínimo 10 exemplos)
3. Defina o RITMO textual (comprimento típico de frases, estrutura de parágrafos)
4. Especifique regras de VOCABULÁRIO (termos a usar, termos a evitar)
5. Inclua 3-5 EXEMPLOS de frases no estilo do magistrado
6. Defina como FUNDAMENTAR (estilo de citação, transições argumentativas)

O prompt gerado deve ser autocontido - qualquer LLM deve poder usá-lo para
reproduzir o estilo do magistrado sem acesso aos exemplos originais.

⚠️ Responda APENAS com o prompt de estilo, sem explicações ou análises."
`;
